# Multimodal_Final_SceneWeaver

./: .gitignore  LICENSE  README.md  finetune_continuity.sh  pyproject.toml  requirements.txt  run_story_pipeline.sh  run_story_simple.sh  running.sh
configs/: default.yaml  models.yaml  prompts.yaml
data/examples/: storyline.txt
data/processed/: msrvtt_train.jsonl  msrvtt_train.meta.json
data_sources/: base_dataset.py  load_dataset.py  msrvtt_loader.py
datasets/: load_dataset.py
director_llm/: __init__.py  scene_director.py
memory_module/: __init__.py  captioner.py  embedding_memory.py  window_critic.py
notebooks/: quick_debug.ipynb
outputs/reports/: latest_report.json
outputs/story_run/: run_log.jsonl  run_summary.json
outputs/story_run_20260220_200544/: run_log.jsonl  run_summary.json
outputs/story_run_20260220_200751/: run_log.jsonl  run_summary.json
outputs/story_run_20260220_201019/: run_log.jsonl  run_summary.json
outputs/story_run_20260220_201053/: run_log.jsonl  run_summary.json
outputs/story_run_20260220_201107/: run_log.jsonl  run_summary.json
scripts/: 01_fetch_texts.py  02_build_index.py  03_generate_storyboard.py  04_generate_video_windows.py  05_refine_loop.py  06_evaluate.py  07_make_preview_clips.py  08_repair_windows.py  export_prompts.py  finetune_flintstones_continuity.py  finetune_pororo_continuity.py  generate_wan_clip.py  run_story_pipeline.py
src/driftguard/: cli.py  pipeline.py
src/driftguard/critics/: canon.py  (+2 more)
tests/: test_caption_anchor.py  test_chunking.py
video_backbone/: __init__.py  wan_backbone.py
(+28 files in other folders)
